# Confidence-Analyzer-AI

./: .gitignore  README.md  package.json
backend/: README_backend.md  config.py  requirements.txt
backend/api/: app.py
backend/data/history/: result_20260412_201536.json  result_20260412_205823.json  result_20260412_210946.json  result_20260412_211018.json  result_20260412_220220.json  result_20260414_220318.json  result_20260416_190152.json  result_20260416_190911.json  result_20260416_191006.json  result_20260416_191204.json
backend/data/processed/: fusion_dataset.csv
backend/fusion_model/: predict_fusion.py  train_fusion_model.py
backend/fusion_model/artifacts/: confusion_matrix.csv  fusion_model.pkl
backend/integration/: batch_audio_predictions.py  batch_facial_predictions.py  build_fusion_dataset.py  extract_audio_from_video.py  extract_visual_from_video.py  facial_wrapper.py  orchestrator.py
backend/outputs/audio/: batch_audio.csv
backend/outputs/facial/: batch_facial.csv
backend/outputs/reports/: latest_result.json
data/: processed_features.csv
frontend/: index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: AnalysisLoader.tsx  Layout.tsx  (+2 more)
models/bhavesh_visual_module/: README.md  batch_extract_features.py  config.py  main.py  output.txt  requirements.txt
models/heet_audio_module/: requirements.txt
(+152 files in other folders)
