[package]
name = "confidence-analyzer-ai"
version = "1.0.0"
description = "AI-powered Confidence & Stress Analysis Desktop App"
authors = ["Confidence Analyzer Team"]
edition = "2021"

[lib]
name = "confidence_analyzer_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
